Firmware/SensorBoard/build/log/idf_py_stdout_output_56277
[1/12] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/home/hexdev04/.espressif/tools/xtensa-esp32-elf/esp-2022r1-11.2.0/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1-dev-1883-g1657db56c9\" -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/hexdev04/Documents/Projetos/vipper/Vipper/Firmware/SensorBoard/build/config -I/home/hexdev04/Documents/Projetos/vipper/Vipper/Firmware/SensorBoard/main -I/home/hexdev04/esp/esp-idf/components/newlib/platform_include -I/home/hexdev04/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/hexdev04/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/hexdev04/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/hexdev04/esp/esp-idf/components/freertos/esp_additions/include -I/home/hexdev04/esp/esp-idf/components/esp_hw_support/include -I/home/hexdev04/esp/esp-idf/components/esp_hw_support/include/soc -I/home/hexdev04/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/hexdev04/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/hexdev04/esp/esp-idf/components/esp_hw_support/port/esp32/private_include -I/home/hexdev04/esp/esp-idf/components/heap/include -I/home/hexdev04/esp/esp-idf/components/log/include -I/home/hexdev04/esp/esp-idf/components/soc/include -I/home/hexdev04/esp/esp-idf/components/soc/esp32/. -I/home/hexdev04/esp/esp-idf/components/soc/esp32/include -I/home/hexdev04/esp/esp-idf/components/hal/esp32/include -I/home/hexdev04/esp/esp-idf/components/hal/include -I/home/hexdev04/esp/esp-idf/components/hal/platform_port/include -I/home/hexdev04/esp/esp-idf/components/esp_rom/include -I/home/hexdev04/esp/esp-idf/components/esp_rom/include/esp32 -I/home/hexdev04/esp/esp-idf/components/esp_rom/esp32 -I/home/hexdev04/esp/esp-idf/components/esp_common/include -I/home/hexdev04/esp/esp-idf/components/esp_system/include -I/home/hexdev04/esp/esp-idf/components/esp_system/port/soc -I/home/hexdev04/esp/esp-idf/components/esp_system/port/include/private -I/home/hexdev04/esp/esp-idf/components/xtensa/include -I/home/hexdev04/esp/esp-idf/components/xtensa/esp32/include -I/home/hexdev04/esp/esp-idf/components/lwip/include -I/home/hexdev04/esp/esp-idf/components/lwip/include/apps -I/home/hexdev04/esp/esp-idf/components/lwip/include/apps/sntp -I/home/hexdev04/esp/esp-idf/components/lwip/lwip/src/include -I/home/hexdev04/esp/esp-idf/components/lwip/port/esp32/include -I/home/hexdev04/esp/esp-idf/components/lwip/port/esp32/include/arch -I/home/hexdev04/Documents/Projetos/vipper/Vipper/Firmware/SensorBoard/components/speaker/include -I/home/hexdev04/Documents/Projetos/vipper/Vipper/Firmware/SensorBoard/managed_components/espressif__mpu6050/include -I/home/hexdev04/esp/esp-idf/components/driver/include -I/home/hexdev04/esp/esp-idf/components/driver/deprecated -I/home/hexdev04/esp/esp-idf/components/driver/esp32/include -I/home/hexdev04/esp/esp-idf/components/esp_pm/include -I/home/hexdev04/esp/esp-idf/components/esp_ringbuf/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/hexdev04/Documents/Projetos/vipper/Vipper/Firmware/SensorBoard=. -fmacro-prefix-map=/home/hexdev04/esp/esp-idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c /home/hexdev04/Documents/Projetos/vipper/Vipper/Firmware/SensorBoard/main/main.c
/home/hexdev04/Documents/Projetos/vipper/Vipper/Firmware/SensorBoard/main/main.c: In function 'app_main':
/home/hexdev04/Documents/Projetos/vipper/Vipper/Firmware/SensorBoard/main/main.c:10:5: error: too few arguments to function 'play_audio_file'
   10 |     play_audio_file();
      |     ^~~~~~~~~~~~~~~
In file included from /home/hexdev04/Documents/Projetos/vipper/Vipper/Firmware/SensorBoard/main/main.c:2:
/home/hexdev04/Documents/Projetos/vipper/Vipper/Firmware/SensorBoard/components/speaker/include/speaker.h:5:6: note: declared here
    5 | void play_audio_file(void *args);
      |      ^~~~~~~~~~~~~~~
[2/12] Performing build step for 'bootloader'
[1/1] cd /home/hexdev04/Documents/Projetos/vipper/Vipper/Firmware/SensorBoard/build/bootloader/esp-idf/esptool_py && /home/hexdev04/.espressif/python_env/idf5.1_py3.10_env/bin/python /home/hexdev04/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/hexdev04/Documents/Projetos/vipper/Vipper/Firmware/SensorBoard/build/bootloader/bootloader.bin
Bootloader binary size 0x6720 bytes. 0x8e0 bytes (8%) free.
[3/10] Building C object esp-idf/speaker/CMakeFiles/__idf_speaker.dir/speaker.c.obj
ninja: build stopped: subcommand failed.
